--- a/presentation/spring/index.html
+++ b/presentation/spring/index.html
@@ -75,6 +75,8 @@
 
 
 
+  <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
 </head>
 
 <div class="reveal">
