--- a/gallery/honors/index.html
+++ b/gallery/honors/index.html
@@ -1587,6 +1587,15 @@
       </div>
       
       <div class="grid-item">
+        <img src="/hannablog/gallery/maodun2.jpg" alt="茅盾青少年征文" />
+        <div class="grid-item__desc hide">
+          <span class="grid-item__desc--text">
+            茅盾青少年征文
+          </span>
+        </div>
+      </div>
+      
+      <div class="grid-item">
         <img src="/hannablog/gallery/maodun3.jpg" alt="茅盾青少年征文" />
         <div class="grid-item__desc hide">
           <span class="grid-item__desc--text">
